changed class name

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     color: #fff;
   }
   
-  /* Navbar Styles */
+  /* Navbar Style */
   .navbar {
     display: flex;
     justify-content: space-between;
